--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,13 +13,26 @@
             <div class="page-header">
                 <h1><a href="/">Django Girls Blog</a></h1>
             </div>
+            <div class="post">
+                    <p>publicado: {{ post.published_date }}</p>
+                    <h2><a href="">{{ post.title }}</a></h2>
+                    <p>{{ post.text|linebreaksbr }}</p>
+            </div>
                 
-                {% for post in posts %}
-                    <div>
-                        <p> publicado: {{ post.published_date }}</p>
-                        <h2><a href="">{{ post.title }}</a></h2>
-                        <p>{{ post.text|linebreaksbr }}</p>
+            <div class="content container">
+                    <div class="row">
+                        <div class="col-md-8">
+                            {% for post in posts %}
+                                <div class="post">
+                                    <div class="date">
+                                        <p>publicado: {{ post.published_date }}</p>
+                                    </div>
+                                    <h2><a href="">{{ post.title }}</a></h2>
+                                    <p>{{ post.text|linebreaksbr }}</p>
+                                </div>
+                            {% endfor %}
+                        </div>
                     </div>
-                {% endfor %}
+                </div>
     </body>
 </html>
